fix(nav): increase clickable area on mobile menu icon

--- a/site/SiteNavigation.scss
+++ b/site/SiteNavigation.scss
@@ -33,9 +33,10 @@
     }
 
     .mobile-menu-toggle {
-        padding: 8px;
-        line-height: 1;
-        margin-left: -8px;
+        button {
+            padding: 8px;
+            margin-left: -8px;
+        }
     }
 
     .site-primary-links {
